narrower motored by row

--- a/kooplexhub/kooplex/hub/templates/app/index.html
+++ b/kooplexhub/kooplex/hub/templates/app/index.html
@@ -14,18 +14,20 @@
   </div>
 </div>
 
-<div class="jumbotron" style="padding-top: 0px">
-  <p class="lead">Motored by:</p>
-  <div class="row" style="float: right">
-   <img src="/static/app/content/dockerlogo.png" style="height: 40px; padding-right: 10px" alt="docker">
-   <img src="/static/app/content/django.png" style="height: 40px; padding-right: 10px" alt="django">
-   <img src="/static/app/content/jupyter.png" style="height: 40px; padding-right: 10px" alt="jupyter">
-   <!-- img src="https://jupyter.readthedocs.io/en/latest/_static/_images/jupyter.svg" style="height: 40px; padding-right: 10px" alt="Jupyter Notebook" -->
-   <img src="/static/app/content/gitlab.png" style="height: 40px; padding-right: 10px" alt="gitlab">
-   <!--img src="https://about.gitlab.com/images/logo.png" style="height: 40px; padding-right: 10px" alt="GitLab"-->
-   <!--img src="https://raw.githubusercontent.com/docker-library/docs/9d36b4ed7cabc35dbd3849272ba2bd7abe482172/owncloud/logo.png" style="height: 40px; padding-right: 10px" alt="OwnCLoud Fileserver"-->
-   <img src="/static/app/content/owncloud.png" style="height: 40px; padding-right: 10px" alt="owncloud">
-   <img src="/static/app/content/Nginx-Logo.png" style="height: 40px; padding-right: 10px" alt="nginx">
+<div class="jumbotron container-fluid" style="padding-top: 10px; padding-bottom: 10px">
+  <div class="row">
+    <div class="col-md-3">Motored by:</div>
+    <div class="col-md-9" style="text-align: right">
+     <img src="/static/app/content/dockerlogo.png" style="height: 40px; padding-right: 10px" alt="docker">
+     <img src="/static/app/content/django.png" style="height: 40px; padding-right: 10px" alt="django">
+     <img src="/static/app/content/jupyter.png" style="height: 40px; padding-right: 10px" alt="jupyter">
+     <!-- img src="https://jupyter.readthedocs.io/en/latest/_static/_images/jupyter.svg" style="height: 40px; padding-right: 10px" alt="Jupyter Notebook" -->
+     <img src="/static/app/content/gitlab.png" style="height: 40px; padding-right: 10px" alt="gitlab">
+     <!--img src="https://about.gitlab.com/images/logo.png" style="height: 40px; padding-right: 10px" alt="GitLab"-->
+     <!--img src="https://raw.githubusercontent.com/docker-library/docs/9d36b4ed7cabc35dbd3849272ba2bd7abe482172/owncloud/logo.png" style="height: 40px; padding-right: 10px" alt="OwnCLoud Fileserver"-->
+     <img src="/static/app/content/owncloud.png" style="height: 40px; padding-right: 10px" alt="owncloud">
+     <img src="/static/app/content/Nginx-Logo.png" style="height: 40px; padding-right: 10px" alt="nginx">
+    </div>
   </div>
 </div>
 
