footer style to match heading, eyecandy's place defined

--- a/kooplexhub/kooplex/hub/templates/app/index.html
+++ b/kooplexhub/kooplex/hub/templates/app/index.html
@@ -14,6 +14,12 @@
   </div>
 </div>
 
+<!--
+<div class="jumbotron container-fluid" style="padding-top: 10px; padding-bottom: 10px">
+let's put some eyecandy here
+</div>
+-->
+
 <div class="jumbotron container-fluid" style="padding-top: 10px; padding-bottom: 10px">
   <div class="row">
     <div class="col-md-3">Motored by:</div>
@@ -31,15 +37,13 @@
   </div>
 </div>
 
-<footer class="bs-docs-footer" style="padding-top: 50px;padding-bottom: 50px;margin-top: 10px;color: #99979c;background-color: #2a2730;">
-  <div class="container">
-    <ul>
-        <li>To reach the developers, please send a message to - <a href="#">kooplex at complex.elte.hu.</a></li>
-        <li>To report problems or buggy features, please, file an issue at - <a href="https://github.com/kooplex/kooplex-hub" target="_blank">https://github.com/kooplex/kooplex-hub</a></li>
-        <li>There is manual at - <a href="https://github.com/kooplex/kooplex-hub/wiki" target="_blank">https://github.com/kooplex/kooplex-hub/wiki </a></li>
-    </ul>
-    <p>Designed and built with all the love in the world by the <b>Kooplex Team</b>. We try to maintain it too! :)</p>
- </div>
-</footer>
+<div class="jumbotron bs-docs-footer" style="font-size: 14px; padding-top: 20px; padding-bottom: 20px; color: #99979c; background-color: #2a2730;">
+  <p>Designed and built with all the love in the world by the <b>Kooplex Team</b>. We try to maintain it too! :)</p>
+  <ul>
+    <li>To reach the developers please send a message to - <strong>kooplex at complex.elte.hu.</strong></li>
+    <li>To report problems or buggy features please file an issue at - <a href="https://github.com/kooplex/kooplex-hub" target="_blank" style="color: #99979c"><strong>https://github.com/kooplex/kooplex-hub</strong></a></li>
+    <li>To check the manual please visit - <a href="https://github.com/kooplex/kooplex-hub/wiki" target="_blank" style="color: #99979c"><strong>https://github.com/kooplex/kooplex-hub/wiki</strong></a></li>
+  </ul>
+</div>
 
 {% endblock %}
