--- a/kooplexhub/kooplex/hub/templates/app/index.html
+++ b/kooplexhub/kooplex/hub/templates/app/index.html
@@ -4,7 +4,7 @@
 
 <div class="jumbotron">
   <h2>Kooplex</h2>
-  <p class="lead">Infrastructure for flexible collaboration</p>
+  <p class="lead">An infrastructure for flexible collaboration</p>
   <div class="container" style="font-size: 14px">
    <ul>
      <li>Access digested scientific output, meant for the general public.</li>
