--- a/kooplexhub/kooplex/hub/templates/app/index.html
+++ b/kooplexhub/kooplex/hub/templates/app/index.html
@@ -2,23 +2,44 @@
 
 {% block content %}
 
-<div class="jumbotron">
+<div class="jumbotron" style="padding-top: 10px; padding-bottom: 10px">
   <h2>Kooplex</h2>
   <p class="lead">An infrastructure for flexible collaboration</p>
-  <div class="container" style="font-size: 14px">
-   <ul>
-     <li>Access digested scientific output, meant for the general public.</li>
-     <li>Develop and share your jupyter notebook projects.</li>
-     <li>Access private cloud file system, share data and results.</li>
-   </ul>
-  </div>
 </div>
 
-<!--
 <div class="jumbotron container-fluid" style="padding-top: 10px; padding-bottom: 10px">
-let's put some eyecandy here
+  <div id="myCarousel" class="carousel slide" data-ride="carousel">
+    <!-- Indicators -->
+    <ol class="carousel-indicators">
+      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+      <li data-target="#myCarousel" data-slide-to="1"></li>
+      <li data-target="#myCarousel" data-slide-to="2"></li>
+    </ol>
+  <!-- Wrapper for slides -->
+    <div class="carousel-inner" style="min-height: 5em;">
+      <div class="item active">
+        <img src="TBA.jpg" alt="Access digested scientific output, meant for the general public">
+      </div>
+  
+      <div class="item">
+        <img src="TBA.jpg" alt="Develop and share your jupyter notebook projects">
+      </div>
+  
+      <div class="item">
+        <img src="TBA.jpg" alt="Access private cloud file system, share data and results">
+      </div>
+    </div>
+  <!-- Left and right controls -->
+    <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+      <span class="glyphicon glyphicon-chevron-left"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="right carousel-control" href="#myCarousel" data-slide="next">
+      <span class="glyphicon glyphicon-chevron-right"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
 </div>
--->
 
 <div class="jumbotron container-fluid" style="padding-top: 10px; padding-bottom: 10px">
   <div class="row">
