term motored -> powered

--- a/kooplexhub/kooplex/hub/templates/app/index.html
+++ b/kooplexhub/kooplex/hub/templates/app/index.html
@@ -43,7 +43,7 @@
 
 <div class="jumbotron container-fluid" style="padding-top: 10px; padding-bottom: 10px">
   <div class="row">
-    <div class="col-md-3">Motored by:</div>
+    <div class="col-md-3">Powered by</div>
     <div class="col-md-9" style="text-align: right">
      <img src="/static/app/content/dockerlogo.png" style="height: 40px; padding-right: 10px" alt="docker">
      <img src="/static/app/content/django.png" style="height: 40px; padding-right: 10px" alt="django">
