new lines in code

--- a/kooplexhub/kooplex/hub/templates/app/notebooks-commitform.html
+++ b/kooplexhub/kooplex/hub/templates/app/notebooks-commitform.html
@@ -29,9 +29,9 @@
       <hr>
       <p>In your favour the following commands are issued in the project folder:</p> 
       <code> 
-git add &lt;names of modified and added files&gt;
-git rm &lt;names of deleted files&gt; .
-git commmit -m '&lt;your commit message&gt;'
+git add &lt;names of modified and added files&gt;<br>
+git rm &lt;names of deleted files&gt; .<br>
+git commmit -m '&lt;your commit message&gt;'<br>
 git push
       </code>
     </div>   <!-- panel-body -->
