introduced notebook open for reports

--- a/kooplexhub/kooplex/hub/templates/app/notebooks-publishform.html
+++ b/kooplexhub/kooplex/hub/templates/app/notebooks-publishform.html
@@ -56,6 +56,7 @@ Description of this report
               <input type="hidden" id="reports2remove" name="reports2remove" value="" />
               <input type="submit" name="html" value="Convert to html" class="btn btn-default" />
               <input type="submit" name="dashboard" value="Deploy as dashboard" class="btn btn-default" />
+              <input type="submit" name="report_server" value="Deploy as Report Server" class="btn btn-default" />
               <input type="submit" name="cancel" value="Cancel" class="btn btn-default" />
             </div>   <!-- col -->
           </div>     <!-- form-group -->
