--- a/kooplexhub/kooplex/hub/templates/report/partial.html
+++ b/kooplexhub/kooplex/hub/templates/report/partial.html
@@ -8,9 +8,13 @@
 <div class="panel panel-default ">
 {% endif %}
   <div class="panel-heading">
-    <a href="{{ report_latest.url_ }}" target="_blank">
+    <a href="{% url 'report-open' %}?report_id={{ report_latest.id }}&creator={{ report_latest.creator_name }}" target="_blank">
       <button type="button" class="btn btn-info"><span class="glyphicon glyphicon-folder-open" aria-hidden="true"></span> Open</button>
     </a>
+      <!--a href="{% url 'report-open' %}?report_id={{ report_latest.id }}&creator={{ report_latest.creator_name }}" target="_blank">
+      <button type="button" class="btn btn-info"><span class="glyphicon glyphicon-folder-open" aria-hidden="true"></span> Stop</button>
+    </a-->
+
     <a data-toggle="collapse" href="#collapse{{ report_latest.id }}{{ pane }}" style="text-decoration: none; color: gray">
       <strong>{{ report_latest.name  }}/{{ project.name }} [{{ report_latest.ts_ }}]</strong> - {{ report_latest.creator_name }}
     </a>
