--- a/kooplexhub/kooplex/hub/templates/report/partial.html
+++ b/kooplexhub/kooplex/hub/templates/report/partial.html
@@ -9,12 +9,11 @@
 {% endif %}
   <div class="panel-heading">
     <a href="{% url 'report-open' %}?report_id={{ report_latest.id }}&creator={{ report_latest.creator_name }}" target="_blank">
-      <button type="button" class="btn btn-info"><span class="glyphicon glyphicon-folder-open" aria-hidden="true"></span> Open</button>
+      <button type="button" class="btn btn-info"><span class="glyphicon glyphicon-folder-open" aria-hidden="true"></span> Open a Dashboard Server</button>
     </a>
-      <!--a href="{% url 'report-open' %}?report_id={{ report_latest.id }}&creator={{ report_latest.creator_name }}" target="_blank">
-      <button type="button" class="btn btn-info"><span class="glyphicon glyphicon-folder-open" aria-hidden="true"></span> Stop</button>
-    </a-->
-
+      <a href="{% url 'report-start' %}?report_id={{ report_latest.id }}&creator={{ report_latest.creator_name }}" target="_blank">
+      <button type="button" class="btn btn-info"><span class="glyphicon glyphicon-folder-open" aria-hidden="true"></span> Open a Report Server</button>
+    </a>
     <a data-toggle="collapse" href="#collapse{{ report_latest.id }}{{ pane }}" style="text-decoration: none; color: gray">
       <strong>{{ report_latest.name  }}/{{ project.name }} [{{ report_latest.ts_ }}]</strong> - {{ report_latest.creator_name }}
     </a>
