--- a/kooplexhub/kooplex/hub/templates/app/navbar.html
+++ b/kooplexhub/kooplex/hub/templates/app/navbar.html
@@ -28,10 +28,13 @@
         {% if user.is_superuser %}
           <li><a href="{% url 'usermanagement-form' %}">Admin</a></li>
         {% endif %}
+        <li><a href="#HELP" role="button" type="button" data-toggle="tooltip" title="Get help" data-placement="bottom">Help</a></li>
+
       {% else %}
         <li><a href="{% url 'login' %}" role="button" type="button" data-toggle="tooltip" title="Manage jupyter notebook projects" data-placement="bottom">Projects</a></li>
         <li><a href="{% url 'login' %}" role="button" type="button" data-toggle="tooltip" title="Browse project or file issues" data-placement="bottom">Gitlab</a></li>
         <li><a href="{% url 'login' %}" role="button" type="button" data-toggle="tooltip" title="Access cloud storage" data-placement="bottom">Owncloud</a></li>
+        <li><a href="#HELP" role="button" type="button" data-toggle="tooltip" title="Get help" data-placement="bottom">Help</a></li>
       {% endif %}
     </ul>
     <ul class="nav navbar-nav navbar-right">
