--- a/kooplexhub/kooplex/hub/templates/app/notebooks-settings.html
+++ b/kooplexhub/kooplex/hub/templates/app/notebooks-settings.html
@@ -10,6 +10,7 @@
           <li class="active"><a href="#pane_image-{{ item.id }}" data-toggle="tab">Image</a></li>
           <li><a href="#pane_volume-{{ item.id }}" data-toggle="tab">Storage and volumes</a></li>
           <li><a href="#pane_deletion-{{ item.id }}" data-toggle="tab">Deletion</a></li>
+          <li><a href="#pane_scope-{{ item.id }}" data-toggle="tab">Scope</a></li>
         </ul>
         <div class="tab-content">
           <div id="pane_image-{{ item.id }}" class="tab-pane fade in active">
@@ -22,6 +23,9 @@
             <p>All unshared data related to this project are lost by the deletion.</p>
             <p>Are you are sure about it?</p>
             <button type="submit" class="btn btn-danger" name="button" value="delete"> Really delete</button>
+          </div>
+            <div id="pane_scope-{{ item.id }}" class="tab-pane fade">
+            {% include 'app/notebooks-new-pane_scope.html' %}
           </div>
         </div>   <!-- tab-content -->
       </div>     <!-- modal-body -->
