Help menu is added to navbar

--- a/kooplexhub/kooplex/hub/templates/app/navbar.html
+++ b/kooplexhub/kooplex/hub/templates/app/navbar.html
@@ -28,14 +28,18 @@
         {% if user.is_superuser %}
           <li><a href="{% url 'usermanagement-form' %}">Admin</a></li>
         {% endif %}
-        <li><a href="#HELP" role="button" type="button" data-toggle="tooltip" title="Get help" data-placement="bottom">Help</a></li>
-
       {% else %}
         <li><a href="{% url 'login' %}" role="button" type="button" data-toggle="tooltip" title="Manage jupyter notebook projects" data-placement="bottom">Projects</a></li>
         <li><a href="{% url 'login' %}" role="button" type="button" data-toggle="tooltip" title="Browse project or file issues" data-placement="bottom">Gitlab</a></li>
         <li><a href="{% url 'login' %}" role="button" type="button" data-toggle="tooltip" title="Access cloud storage" data-placement="bottom">Owncloud</a></li>
-        <li><a href="#HELP" role="button" type="button" data-toggle="tooltip" title="Get help" data-placement="bottom">Help</a></li>
       {% endif %}
+        <li class="dropdown">
+          <a class="dropdown-togle" data-toggle="dropdown" href="#" role="button" type="button" data-toggle="tooltip" title="Manage jupyter notebook projects" data-placement="bottom">Help <span class="caret"/></a>
+          <ul class="dropdown-menu">
+            <li><a href="https://github.com/kooplex/kooplex-hub/wiki" target="_blank">Kooplex Hub Wiki</a></li>
+            <li><a href="#" data-toggle="modal" data-target="#about-contacts">Contacts and about</a></li>
+          </ul>
+        </li>
     </ul>
     <ul class="nav navbar-nav navbar-right">
       {% if user.is_authenticated %}
