--- a/kooplexhub/kooplex/hub/templates/app/notebooks.html
+++ b/kooplexhub/kooplex/hub/templates/app/notebooks.html
@@ -28,6 +28,7 @@
 
 {% include 'app/notebooks-owncloud.html' %}
 {% include 'app/notebooks-new-partial.html' %}
+{% include 'app/about.html' %}
 
 {% if errors %}
 <div class="alert alert-danger" role="alert">
