--- a/kooplexhub/kooplex/hub/templates/app/about.html
+++ b/kooplexhub/kooplex/hub/templates/app/about.html
@@ -1,10 +1,36 @@
-{% extends "app/layout.html" %}
+<div id="about-contacts" class="modal fade modal-dialog" role="dialog" style="position: fixed; top: 0px; ">
+  <div class="modal-content">
+      <div class="modal-body">
+        <button type="button" class="close" data-dismiss="modal">&times;</button>
+        <h4>About Kooplex</h4>
+        <ul class="nav nav-tabs">
+          <li class="active"><a href="#pane_about" data-toggle="tab">About</a></li>
+          <li><a href="#pane_help" data-toggle="tab">Help</a></li>
+          <li><a href="#pane_contact" data-toggle="tab">Contact</a></li>
+        </ul>
+        <div class="tab-content">
+          <div id="pane_about" class="tab-pane fade in active">
+            Kooplex is developed by ...</br>
+              It's purpose is to ...
+          </div>
+          <div id="pane_help" class="tab-pane fade">
+            Please ask a fellow user for help or write to <strong>kooplex at complex.elte.hu</strong>
+          </div>
+            <div id="pane_contact" class="tab-pane fade">
+            To reach the developers, please send a message to <strong>kooplex at complex.elte.hu</strong>.
+    To report problems or buggy features, please, file an issue at
+                <a href="https://github.com/kooplex/kooplex-hub" target="_blank">https://github.com/kooplex/kooplex-hub</a>
+    There is manual at <a href="https://github.com/kooplex/kooplex-hub/wiki" target="_blank">https://github.com/kooplex/kooplex-hub/wiki</a>
+          </div>
+        </div>   <!-- tab-content -->
+      </div>     <!-- modal-body -->
+      <div>
 
-{% block content %}
+</div>
+      <div class="modal-footer">
 
-<h2>{{ title }}.</h2>
-<h3>{{ message }}</h3>
 
-<p>Use this area to provide additional information.</p>
-
-{% endblock %}
+        <button class="btn btn-default" data-dismiss="modal"> <- Back</button>
+      </div>
+  </div>         <!-- modal-content -->
+</div>           <!-- modal -->
