--- a/kooplexhub/kooplex/hub/templates/app/notebooks-new-partial.html
+++ b/kooplexhub/kooplex/hub/templates/app/notebooks-new-partial.html
@@ -6,11 +6,15 @@
         <button type="button" class="close" data-dismiss="modal">&times;</button>
         <h4>Create new project</h4>
         <ul class="nav nav-tabs">
-          <li class="active"><a href="#pane_template" data-toggle="tab">Template</a></li>
+          <li class="active"><a href="#pane_thename" data-toggle="tab">Description</a></li>
+          <li><a href="#pane_template" data-toggle="tab">Template</a></li>
           <li><a href="#pane_volume" data-toggle="tab">Storage and volumes</a></li>
         </ul>
         <div class="tab-content">
-          <div id="pane_template" class="tab-pane fade in active">
+          <div id="pane_thename" class="tab-pane fade in active">
+            {% include 'app/notebooks-new-pane_nameNdescription.html' %}
+          </div>
+          <div id="pane_template" class="tab-pane fade">
             {% include 'app/notebooks-new-pane_template.html' %}
           </div>
           <div id="pane_volume" class="tab-pane fade">
