Help footer in htmls

--- a/kooplexhub/kooplex/hub/templates/app/notebooks-new-pane_scope.html
+++ b/kooplexhub/kooplex/hub/templates/app/notebooks-new-pane_scope.html
@@ -6,3 +6,19 @@
     <button type="submit" class="btn btn-danger" name="button" value="makeprivate">Make it private</button>
 {% endif %}
 
+<br>
+<br>
+<div class="panel panel-success">
+  <div class="panel-heading">
+    <a data-toggle="collapse"  href="#collapse-help-scope" style="text-decoration: none; color: gray">
+      <span class="glyphicon  glyphicon-question-sign"></span> Help <span
+      class="glyphicon glyphicon-option-horizontal"></span>
+    </a>
+  </div>
+<div id="collapse-help-scope" class="panel-collapse collapse">
+  <div class="panel-body">
+    <strong>Scope</strong> defines whether the project is accessible only for
+    you and the project members or also for anyone else
+  </div>
+</div>
+</div>
