--- a/kooplexhub/kooplex/hub/templates/app/notebooks-new-pane_nameNdescription.html
+++ b/kooplexhub/kooplex/hub/templates/app/notebooks-new-pane_nameNdescription.html
@@ -6,3 +6,29 @@
 Description here
 </textarea>
 
+<br>
+<br>
+<div class="panel panel-success">
+  <div class="panel-heading">  
+    <a data-toggle="collapse"  href="#collapse-help-nd" style="text-decoration: none; color: gray">
+      <span class="glyphicon  glyphicon-question-sign"></span> Help <span
+      class="glyphicon glyphicon-option-horizontal"></span>
+    </a>
+  </div>
+
+
+  <div id="collapse-help-nd" class="panel-collapse collapse">
+   <div class="panel-body">
+
+    <strong>Name</strong> is the only compulsory field you need to fill out
+    Default settings are the following:
+    <ul>
+    <li> Image: <code>basic</code>  </li>
+    <li> Scope: Private</li>
+    <li> No volume and storage is mounted </li>
+    <li> Python 3 kernel</li>
+    </ul>
+   </div>
+  </div>
+
+</div>
