--- a/kooplexhub/kooplex/hub/templates/app/notebooks-new-pane_template.html
+++ b/kooplexhub/kooplex/hub/templates/app/notebooks-new-pane_template.html
@@ -10,3 +10,27 @@
   <option value="clonable_project={{ project }}" style="background-color: lightgray">{{ project }}</option>
   {% endfor %}
 </select><br>
+
+<br>
+<br>
+<div class="panel panel-success">
+  <div class="panel-heading">
+    <a data-toggle="collapse"  href="#collapse-help-template" style="text-decoration: none; color: gray">
+      <span class="glyphicon  glyphicon-question-sign"></span> Help <span
+      class="glyphicon glyphicon-option-horizontal"></span>
+    </a>
+  </div>
+<div id="collapse-help-template" class="panel-collapse collapse">
+  <div class="panel-body">
+    <strong>Images</strong> are the bases for the containers in which you can work 
+    <ul>
+    <li> The <code>basic</code> image provides your project with all the necessary
+    packages  </li>
+    <li> If you select a template then in addition to the <code>basic</code> image
+    you will start with notebooks and other utils that has been used for
+    that project.</li>
+    
+    </ul>
+  </div>
+ </div>
+</div>
