--- a/kooplexhub/kooplex/hub/templates/app/notebooks-new-pane_volume.html
+++ b/kooplexhub/kooplex/hub/templates/app/notebooks-new-pane_volume.html
@@ -40,3 +40,27 @@
 {% endfor %}
 {% endif %}
 
+<br>
+<br>
+
+<div class="panel panel-success">
+  <div class="panel-heading">
+   <a data-toggle="collapse"  href="#collapse-help-vol" style="text-decoration: none; color: gray">
+      <span class="glyphicon  glyphicon-question-sign"></span> Help <span
+      class="glyphicon glyphicon-option-horizontal"></span>
+    </a>
+    </div>
+<div id="collapse-help-vol" class="panel-collapse collapse">
+  <div class="panel-body">
+    <strong>Volumes </strong>contain installed conda environments, python and other packages.
+    <ul>
+    <li> Any number volume can be selected. </li>
+    <li> Volumes will be mounted under  <code> /vol/"volumename" </code> </li>
+    <li> When you run a notebook only one conda environment can enabled at
+    once, but all the other packages will be available like yaehmop or siesta.
+    </ul>
+    <strong> Storage volumes </strong> will be mounted also under  <code> /vol/</code>. They contain large amount of data. Only those will be visible
+    here to which you have access.  
+  </div>
+</div>
+</div>
