--- a/kooplexhub/kooplex/hub/templates/app/navbar.html
+++ b/kooplexhub/kooplex/hub/templates/app/navbar.html
@@ -22,7 +22,7 @@
           <a class="dropdown-togle" data-toggle="dropdown" href="#" role="button" type="button" data-toggle="tooltip" title="Access cloud storage" data-placement="bottom">Owncloud <span class="caret"/></a>
           <ul class="dropdown-menu">
             <li><a href="#" data-toggle="modal" data-target="#owncloud">Synchronize</a></li>
-            <li><a href="/owncloud" target="_blank">Owncloud dashboard</a></li>
+            <li><a href="/ownCloud" target="_blank">Owncloud dashboard</a></li>
           </ul>
         </li>
         {% if user.is_superuser %}
