design in frontpages

--- a/kooplexhub/kooplex/hub/templates/app/about.html
+++ b/kooplexhub/kooplex/hub/templates/app/about.html
@@ -10,17 +10,24 @@
         </ul>
         <div class="tab-content">
           <div id="pane_about" class="tab-pane fade in active">
-            Kooplex is developed by ...</br>
-              It's purpose is to ...
+              <div class="well">
+            Kooplex is developed by the <strong>Kooplex Team</strong></br><br>
+              <h4>It's purpose is to give easy access to large databases, facilitate collaboration between members and groups and explore effective workflows in research</h4>
+              </div>
           </div>
           <div id="pane_help" class="tab-pane fade">
+              <div class="well">
             Please ask a fellow user for help or write to <strong>kooplex at complex.elte.hu</strong>
+                  </div>
           </div>
             <div id="pane_contact" class="tab-pane fade">
-            To reach the developers, please send a message to <strong>kooplex at complex.elte.hu</strong>.
-    To report problems or buggy features, please, file an issue at
-                <a href="https://github.com/kooplex/kooplex-hub" target="_blank">https://github.com/kooplex/kooplex-hub</a>
-    There is manual at <a href="https://github.com/kooplex/kooplex-hub/wiki" target="_blank">https://github.com/kooplex/kooplex-hub/wiki</a>
+                <div class="well">
+                    <ul>
+                        <li>To reach the developers, please send a message to <strong>kooplex at complex.elte.hu</strong>.</li>
+    <li>To report problems or buggy features, please, file an issue at
+                <a href="https://github.com/kooplex/kooplex-hub" target="_blank">https://github.com/kooplex/kooplex-hub</a></li>
+    <li>There is manual at <a href="https://github.com/kooplex/kooplex-hub/wiki" target="_blank">https://github.com/kooplex/kooplex-hub/wiki</a></li>
+                    </ul></div>
           </div>
         </div>   <!-- tab-content -->
       </div>     <!-- modal-body -->
