--- a/kooplexhub/kooplex/hub/templates/app/navbar.html
+++ b/kooplexhub/kooplex/hub/templates/app/navbar.html
@@ -36,6 +36,7 @@
         <li class="dropdown">
           <a class="dropdown-togle" data-toggle="dropdown" href="#" role="button" type="button" data-toggle="tooltip" title="Manage jupyter notebook projects" data-placement="bottom">Help <span class="caret"/></a>
           <ul class="dropdown-menu">
+            <li><a href="{% url 'tutorial'  %}">Tutorial</a></li>
             <li><a href="https://github.com/kooplex/kooplex-hub/wiki" target="_blank">Kooplex Hub Wiki</a></li>
             <li><a href="#" data-toggle="modal" data-target="#about-contacts">Contacts and about</a></li>
           </ul>
