--- a/kooplexhub/kooplex/hub/templates/app/notebooks-project-partial.html
+++ b/kooplexhub/kooplex/hub/templates/app/notebooks-project-partial.html
@@ -108,8 +108,8 @@
             <!-- GIT RELATED STUFF -->
 
         <a href="{% url 'notebooks-commitform' %}?project_id={{ item.id }}">
-          <button role="button" type="button" class="btn btn-warning" data-toggle="tooltip" title="Commit your changes to project {{ item.name }} or revert to a former commited state" data-placement="top">
-            <span class="glyphicon glyphicon-pushpin" aria-hidden="true"></span>
+          <button role="button" type="button" class="btn btn-warning" data-toggle="tooltip" title="Version control of your project {{ item.name }}. You can commit your changes, revert to a former commited state or pull remote changes" data-placement="top">
+            <span class="glyphicon glyphicon-random" aria-hidden="true"></span>
           </button>
         </a>
 
