use davfs to synchronize

--- a/kooplexhub/kooplex/hub/templates/app/navbar.html
+++ b/kooplexhub/kooplex/hub/templates/app/navbar.html
@@ -21,7 +21,8 @@
         <li class="dropdown">
           <a class="dropdown-togle" data-toggle="dropdown" href="#" role="button" type="button" data-toggle="tooltip" title="Access cloud storage" data-placement="bottom">Owncloud <span class="caret"/></a>
           <ul class="dropdown-menu">
-            <li><a href="#" data-toggle="modal" data-target="#owncloud">Synchronize</a></li>
+            <!-- deprecated in favor of davfs -->
+            <!-- li><a href="#" data-toggle="modal" data-target="#owncloud">Synchronize</a></li -->
             <li><a href="/ownCloud" target="_blank">Owncloud dashboard</a></li>
           </ul>
         </li>
