--- a/kooplexhub/kooplex/hub/templates/app/navbar.html
+++ b/kooplexhub/kooplex/hub/templates/app/navbar.html
@@ -18,14 +18,17 @@
           </ul>
         </li>
         <li><a href="/gitlab" target="_blank" role="button" type="button" data-toggle="tooltip" title="Browse project or file issues" data-placement="bottom">Gitlab</a></li>
+        <li><a href="/ownCloud" target="_blank" role="button" type="button" data-toggle="tooltip" title="Browse your files in the cloud" data-placement="bottom">Owncloud</a></li>
+    <!-- deprecated in favor of davfs -->
+        <!--
         <li class="dropdown">
           <a class="dropdown-togle" data-toggle="dropdown" href="#" role="button" type="button" data-toggle="tooltip" title="Access cloud storage" data-placement="bottom">Owncloud <span class="caret"/></a>
           <ul class="dropdown-menu">
-            <!-- deprecated in favor of davfs -->
-            <!-- li><a href="#" data-toggle="modal" data-target="#owncloud">Synchronize</a></li -->
+            <li><a href="#" data-toggle="modal" data-target="#owncloud">Synchronize</a></li>
             <li><a href="/ownCloud" target="_blank">Owncloud dashboard</a></li>
           </ul>
         </li>
+        // -->
         {% if user.is_superuser %}
           <li><a href="{% url 'usermanagement-form' %}">Admin</a></li>
         {% endif %}
