--- a/kooplexhub/kooplex/hub/templates/app/notebooks-project-partial.html
+++ b/kooplexhub/kooplex/hub/templates/app/notebooks-project-partial.html
@@ -3,10 +3,10 @@
 
 {% if item.id in running  %}
 
-<div class="panel panel-success">
-  <div class="panel-heading ">
+<div class="panel panel-success" style="margin-bottom: 3px">
+  <div class="panel-heading" style="padding: 5px 5px;">
     <a href="{% url 'container-open' %}?project_id={{ item.id }}" target="_blank">
-      <button role="button" type="button" class="btn btn-success">
+      <button role="button" type="button" class="btn btn-success" style="padding: 3px 6px 6px 6px">
         <span class="glyphicon glyphicon-folder-open" aria-hidden="true"> Open</span>
       </button>
     </a>
@@ -19,10 +19,10 @@
 
 {% else %}
 
-<div class="panel panel-default">
-  <div class="panel-heading">
+<div class="panel panel-default" style="margin-bottom: 3px">
+  <div class="panel-heading" style="padding: 5px 5px;">
     <a href="{% url 'container-start' %}?project_id={{ item.id }}">
-      <button role="button" type="button" class="btn btn-default">
+      <button role="button" type="button" class="btn btn-default" style="padding: 3px 6px 6px 6px">
         <span class="glyphicon glyphicon-play" aria-hidden="true"> Start</span>
       </button>
     </a>
