template moved in new place

--- a/kooplexhub/kooplex/hub/templates/project/pane-nameNdescription.html
+++ b/kooplexhub/kooplex/hub/templates/project/pane-nameNdescription.html
@@ -2,9 +2,7 @@
 <input type="text" class="form-control" id="project_name" name="project_name" placeholder="Enter Name">
 
 <label for="project_description">Describe your project</label><br>
-<textarea rows="6" cols="50" id="project_description" name="project_description">
-Description here
-</textarea>
+<textarea rows="6" cols="50" id="project_description" name="project_description"></textarea>
 
 <br>
 <br>
