template moved in new place

--- a/kooplexhub/kooplex/hub/templates/project/new.html
+++ b/kooplexhub/kooplex/hub/templates/project/new.html
@@ -12,13 +12,13 @@
         </ul>
         <div class="tab-content">
           <div id="pane_thename" class="tab-pane fade in active">
-            {% include 'app/notebooks-new-pane_nameNdescription.html' %}
+            {% include 'project/pane-nameNdescription.html' %}
           </div>
           <div id="pane_template" class="tab-pane fade">
-            {% include 'app/notebooks-new-pane_template.html' %}
+            {% include 'project/pane-template.html' %}
           </div>
           <div id="pane_volume" class="tab-pane fade">
-            {% include 'app/notebooks-new-pane_volume.html' %}
+            {% include 'project/pane-volume.html' %}
           </div>
         </div>   <!-- tab-content -->
       </div>     <!-- modal-body -->
